2011-09-01 1 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* final tweaks, we’ll start using this

2011-08-23 0.9.13 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* compute total hit counts for Opac LKLs
	* add total hitcounts to database
	* add link to full subject hierarchy to tree output
	* add plugin.tx_nkwgok_pi1.shallowSearch setting to toggle between deep and shallow searches

2011-08-02 0.9.11 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Reduce logging
	* Cleanup

2011-08-01 0.9.10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Optimized Scheduler Task for converting CSV Data with an optional page id
	* Moved scheduler tasks to a seperate directory

2011-05-29 0.9.9 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Added hitcounts for various fields
	* Added configuration for Scheduler Tasks in TypoScript

2011-05-19 0.9.8 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* add field fromopac to database to reliably spot records originating
		from the Opac
	* use lowercase 'lkl' search key instead of 'LKL' for Opac GOK records

2011-05-15 0.9.7 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Added TCA definition for the new Tag field

2011-05-05 0.9.6 Sven-S. Porst <porst@sub.uni-goettigen.de>
	* Change the query format in the search column of the data table from
		URL-escaped Pica Opac queries to non-escaped CCL-queries

2011-05-02 0.9.5 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* rename 'Convert history' scheduler task to 'Convert CSV'
	* store XML files in 'xml' subfolder of fileadmin/gok instead of 'lkl' subfolder
	* change data tree, so we can have other trees besides the main GOK tree (e.g. for
		special Neuerwerbungen or Guide subject lists
	* add backend configuration for hiding GOK-IDs in tree view
	* add 'tags' field from column 8 in CSV files

2011-03-30 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Add ID of containing Typo3 object to DOM IDs, so we can use several 
		GOK-displays on the same web page
