@@ -9,8 +9,7 @@
 			<label index="source">Show GOK-Part</label>
 			<label index="altSource">Ignore the menu selection and start the tree at this GOK</label>
 			<label index="style">Display as</label>
-			<label index="styleTreeNew">Tree</label>
-			<label index="styleTreeOld">Old-fashioned Tree</label>
+			<label index="styleTree">Tree</label>
 			<label index="styleMenu">Menus</label>
 			<label index="showGOKID">Display GOK-ID (e.g. IA 663)</label>
 
@@ -38,8 +37,7 @@
 			<label index="source">GOK-Hierarchie beginnen mit</label>
 			<label index="altSource">Eigene GOK als Startknoten angeben (die Menüauswahl wird dann ignoriert)</label>
 			<label index="style">Anzeigen als</label>
-			<label index="styleTreeNew">Baum</label>
-			<label index="styleTreeOld">unpraktischer Baum</label>
+			<label index="styleTree">Baum</label>
 			<label index="styleMenu">Menüs</label>
 			<label index="showGOKID">GOK-ID (z.B. IA 663) anzeigen</label>
 
@@ -66,8 +64,7 @@
 			<label index="source">GOK-Hierarchie beginnen mit</label>
 			<label index="altSource">Eigene GOK als Startknoten angeben (die Menüauswahl wird dann ignoriert)</label>
 			<label index="style">Anzeigestil</label>
-			<label index="styleTreeNew">Baum</label>
-			<label index="styleTreeOld">unpraktischer Baum</label>
+			<label index="styleTree">Baum</label>
 			<label index="styleMenu">Menüs</label>
 			<label index="showGOKID">GOK-ID (z.B. IA 663) anzeigen</label>
 
