@@ -1,7 +1,7 @@
 /*
-Stylesheet for GOK tree used in nkwgok Typo3 plug-in.
+Stylesheet for GOK tree used in nkwgok TYPO3 plug-in.
 
-2011-03 by Sven-S. Porst, SUB Göttingen <porst@sub.uni-goettingen.de>
+2011 by Sven-S. Porst, SUB Göttingen <porst@sub.uni-goettingen.de>
 */
 
 
@@ -27,7 +27,7 @@ Styles for the GOK Tree
 	text-decoration: underline;
 }
 
-.gokContainer.tree.newStyle a .GOKID {
+.gokContainer.tree a .GOKID {
 	display:block;
 	float:left;
 	width: 6em;
@@ -36,34 +36,34 @@ Styles for the GOK Tree
 	padding-right:0.2em;
 }
 
-.gokContainer.tree.newStyle .GOKName {
+.gokContainer.tree .GOKName {
 	font-weight: bold;
 }
 
-.gokContainer.tree.newStyle .opacLink {
+.gokContainer.tree .opacLink {
 	font-size: 71%;
 	font-style: italic;
 	color: #999;
 }
 
-.gokContainer.tree.newStyle .opacLink.shallow {
+.gokContainer.tree .opacLink.shallow {
 	display: none;
 }
 
-.gokContainer.tree.newStyle.shallowLinks .opacLink.shallow {
+.gokContainer.tree.shallowLinks .opacLink.shallow {
 	display: inline;
 }
 
-.gokContainer.tree.newStyle.shallowLinks .opacLink.deep {
+.gokContainer.tree.shallowLinks .opacLink.deep {
 	display: none;
 }
 
-.gokContainer.tree.newStyle .opacLink:link:after {
+.gokContainer.tree .opacLink:link:after {
 	content: "\002192";
 	padding-left: 0.2em;
 }
 
-.gokContainer.tree.newStyle .opacLink:hover {
+.gokContainer.tree .opacLink:hover {
 	color: #333;
 }
 
