@@ -1,3 +1,7 @@
+2011-11-? 1.1.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* adapt hitcount usage to current Opac indexing
+	* remove support for old-school subject tree style
+
 2011-09-01 1 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* final tweaks, we’ll start using this
 
